Attempt to fix min-height set on pages; still problematic for short pages (footer creeps up)

--- a/renaissance/css/App.css
+++ b/renaissance/css/App.css
@@ -3107,7 +3107,7 @@ table.dataTable th:active {
 #content {
   background: #FFF;
   width: auto;
-  min-height: 800px;
+  min-height: 100%;
   z-index: 18;
   padding-bottom: 25px;
   margin-left: 240px;
