Updated styling for Analyzer; still problem with graph size

--- a/Analyze/inst/WorldBank/www/assets/custom/App.css
+++ b/Analyze/inst/WorldBank/www/assets/custom/App.css
@@ -1,7 +1,7 @@
 body {
   color: #444;
   font: 14px/1.71em 'Helvetica Neue', Helvetica, Arial, san-serif;
-  background: #55565a !important;
+  background: #55565a;
 }
 h1,
 h2,
